--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1,14 +1,41 @@
 *{
     font-family: "Verdana", "Arial", sans-serif;
 }
-h1{
-    font-size: 2.5em;
+html{
+background-image: url("images/bats.gif");	
 }
-h2{
+body{
+	width: 800px;
+	border-style: solid;
+	background: white;
+	box-shadow: 0px 0px 25px 10px black;
+	margin: 0 auto;
+}
+main{
+	border-style: solid;
+}
+header{
+	margin: auto auto;
+	padding-top: 1px;
+	padding-bottom: 10px;
+	background: linear-gradient(45deg, white, orange, orange, black), orange;
+}
+footer{
+	margin: auto auto;
+	padding-top: 15px;
+	padding-bottom: 1px;
+    font-size: small;
+    text-align: center;
+	background: linear-gradient(45deg, black, orange, orange, white), orange;
+}
+h1{
     font-size: 1.8em;
 }
-h3{
+h2{
     font-size: 1.3em;
+}
+h3{
+    font-size: 1em;
 }
 li{
     margin: 15px 1px;
@@ -19,21 +46,16 @@ a{
 a:hover{
     color:green;
 }
-footer{
-    font-size: small;
-    text-align: center;
-}
 .pumpkin{
     float: left;
+	margin: 20px 20px;
 }
 .bodyhead::first-letter{
     font-size: 2em;
 }
-.title{
-    color: orange;
-    font-style: italic;
-    text-shadow: 3px 3px #000000;
-}
 .linklist{
 	margin: 1em .25em;
+}
+.headertext{
+	text-indent: 10px;
 }
